# model-zoo-llm

./: CMakeLists.txt  MODULE.md  NOTICE  README.md  module.yaml  package.xml
.github/workflows/: code-style.yml
example/cpp/: CMakeLists.txt  llm_chat.cpp
include/: llm_service.h
scripts/: bench_llm.sh
src/: llm_backend.h  llm_backend_factory.cpp  llm_backend_factory.h  llm_service.cpp
src/backends/: openai_backend.cpp  openai_backend.h
